2016-02-12  Andy Buckley  <andy.buckley@cern.ch>

	* Update ParticleIdUtils.hh (i.e. PID:: functions) to use the
	functions from the latest version of MCUtils' PIDUtils.h.

2016-01-15  Andy Buckley  <andy.buckley@cern.ch>

	* Change rivet-cmphistos path matching logic from match to search
	(user can add explicit ^ marker if they want match semantics).

2015-12-20  Andy Buckley  <andy.buckley@cern.ch>

	* Improve linspace (and hence also logspace) precision errors by
	using multiplication rather than repeated addition to build edge
	list (thanks to Holger Schulz for the suggestion).

2015-12-15  Andy Buckley  <andy.buckley@cern.ch>

	* Add cmphistos and make-plots machinery for handling 'suffix'
	variations on plot paths, currently just by plotting every line,
	with the variations in a 70% faded tint.

	* Add Beam::pv() method for finding the beam interaction primary
	vertex 4-position.

	* Add a new Particle::setMomentum(E,x,y,z) method, and an origin
	position member which is automatically populated from the
	GenParticle, with access methods corresponding to the momentum
	ones.

2015-12-10  Andy Buckley  <andy.buckley@cern.ch>

	* make-plots: improve custom tick attribute handling, allowing
	empty lists. Also, any whitespace now counts as a tick separator
	-- explicit whitespace in labels should be done via ~ or similar
	LaTeX markup.

2015-12-04  Andy Buckley  <andy.buckley@cern.ch>

	* Pro-actively use -m/-M arguments when initially loading
	histograms in mkhtml, *before* passing them to cmphistos.

2015-12-03  Andy Buckley  <andy.buckley@cern.ch>

	* Move contains() and has_key() functions on STL containers from std to Rivet namespaces.

	* Adding IsRef attributes to all YODA refdata files; this will be
	used to replace the /REF prefix in Rivet v3 onwards. The migration
	has also removed leading # characters from BEGIN/END blocks, as
	per YODA format evolution: new YODA versions as required by
	current Rivet releases are able to read both the old and new