@@ -13,4 +13,5 @@ from rivet.core import *
 __version__ = core.version()
 
 from rivet.plotinfo import *
+from rivet.aopaths import *
 import spiresbib, util
